set(CONTROLLER_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/MainApplicationController.cpp)

add_library(${MAIN_APPLICATION_CONTROLLER_LIB} STATIC ${CONTROLLER_SOURCES})

target_include_directories(${MAIN_APPLICATION_CONTROLLER_LIB}
    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

target_link_libraries(${MAIN_APPLICATION_CONTROLLER_LIB}
    PUBLIC Boost::boost
    PUBLIC ${DATA_TYPES_LIB}
    PRIVATE ${DATA_VALIDATION_LIB}
    PRIVATE ${UTILS_LIB}
    PRIVATE ${FEE_CALCULATION_LIB})
